SVN_SILENT made messages (.desktop file)

--- a/kpresenter/kpresenter.desktop
+++ b/kpresenter/kpresenter.desktop
@@ -11,6 +11,10 @@ Name[tr]=Kpresenter
 Name[x-test]=xxKPresenterxx
 Exec=kpresenter %u
 GenericName=Presentation
+GenericName[el]=Παρουσίαση
+GenericName[ga]=Láithreoireacht
+GenericName[pt]=Apresentação
+GenericName[pt_BR]=Apresentação
 MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/x-kpresenter;application/mspowerpoint;
 Type=Application
 Icon=kpresenter
