--- a/kpresenter/kpresenterpart.desktop
+++ b/kpresenter/kpresenterpart.desktop
@@ -17,4 +17,8 @@ X-KDE-NativeMimeType=application/vnd.oasis.opendocument.presentation
 X-KDE-NativeOasisMimeType=application/vnd.oasis.opendocument.presentation
 X-KDE-ExtraNativeMimeTypes=application/x-kpresenter,application/vnd.oasis.opendocument.presentation-template
 GenericName=Presentation
+GenericName[el]=Παρουσίαση
+GenericName[ga]=Láithreoireacht
+GenericName[pt]=Apresentação
+GenericName[pt_BR]=Apresentação
 Icon=kpresenter
