--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -7,6 +7,10 @@ Name[sv]=Kspread
 Name[x-test]=xxKSpreadxx
 Exec=kspread %u
 GenericName=Spreadsheet
+GenericName[el]=Λογιστικό φύλλο
+GenericName[ga]=Scarbhileog
+GenericName[pt]=Folha de cálculo
+GenericName[pt_BR]=Folha de cálculo
 MimeType=application/vnd.oasis.opendocument.spreadsheet;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro;
 Type=Application
 Icon=kspread
