--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -52,4 +52,8 @@ X-KDE-NativeOasisMimeType=application/vnd.oasis.opendocument.spreadsheet
 X-KDE-NativeMimeType=application/vnd.oasis.opendocument.spreadsheet
 X-KDE-ExtraNativeMimeTypes=application/vnd.oasis.opendocument.spreadsheet-template,application/x-kspread
 GenericName=Spreadsheet
+GenericName[el]=Λογιστικό φύλλο
+GenericName[ga]=Scarbhileog
+GenericName[pt]=Folha de cálculo
+GenericName[pt_BR]=Folha de cálculo
 Icon=kspread
