--- a/kword/kword.desktop
+++ b/kword/kword.desktop
@@ -8,6 +8,10 @@ Name[sv]=Kword
 Name[x-test]=xxKWordxx
 Exec=kword %u
 GenericName=Word Processor
+GenericName[el]=Επεξεργασία κειμένου
+GenericName[ga]=Próiseálaí Focal
+GenericName[pt]=Processador de Texto
+GenericName[pt_BR]=Processador de Texto
 Comment=Write text documents
 Comment[ca]=Escriu documents de text
 Comment[de]=Textdokumente verfassen
