--- a/kword/mailmerge/kabc/kwmailmerge_kabc.desktop
+++ b/kword/mailmerge/kabc/kwmailmerge_kabc.desktop
@@ -19,6 +19,7 @@ Name[eu]=KDE-ren helbide-liburuaren plugina
 Name[fa]=وصلۀ کتاب نشانی KDE
 Name[fi]=KDE:n osoitekirjan liitännäinen
 Name[fr]=Module externe de carnet d'adresses de KDE
+Name[ga]=Breiseán Leabhair Seoltaí KDE
 Name[gl]=Plugin do Libro de Enderezos de KDE
 Name[he]=תוסף של פנקס הכתובות של KDE
 Name[hr]=KDE dodatak adresara
