--- a/kword/mailmerge/kspread/kwmailmerge_kspread.desktop
+++ b/kword/mailmerge/kspread/kwmailmerge_kspread.desktop
@@ -17,6 +17,7 @@ Name[eu]=KSpread-en taula-iturburua
 Name[fa]=متن جدول KSpread
 Name[fi]=KSpread-taulukkolähde
 Name[fr]=Source de tableaux KSpread
+Name[ga]=Foinse Tábla KSpread
 Name[gl]=Fonte en Táboa de KSpread
 Name[he]=מקור טבלאות של KSpread
 Name[hr]=KSpread izvor tablice
