--- a/kword/part/kwordpart.desktop
+++ b/kword/part/kwordpart.desktop
@@ -15,6 +15,7 @@ Name[eu]=KOffice-en testu-prozesadore osagaia
 Name[fa]=مؤلفۀ پردازش واژۀ KOffice
 Name[fi]=KOfficen tekstinkäsittelyohjelma
 Name[fr]=Composant traitement de texte de KOffice
+Name[ga]=Comhpháirt Phróiseála Focal KOffice
 Name[gl]=Componente de Procesamento de Texto de KOffice
 Name[he]=רכיב של KOffice לעיבוד תמלילים
 Name[hu]=KOffice szövegszerkesztő komponens
