disable the snippetsdocker.rb as long as the (for me still not reproducable) crash isn't solved. That means, that even if krossruby is installed, the docker will not show up in the docker-menu. It could still be enabled via the scriptmanager.

--- a/kspread/plugins/scripting/scripts/scripts.rc
+++ b/kspread/plugins/scripting/scripts/scripts.rc
@@ -110,7 +110,7 @@
            name="rbsnippets"
            text="Ruby Snippets"
            comment="Ruby Snippets"
-           enabled="true"
+           enabled="false"
            interpreter="ruby"
            file="docker/snippetsdocker.rb" />
     </collection>
