--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -9,8 +9,10 @@ Exec=kspread %u
 GenericName=Spreadsheet
 GenericName[el]=Λογιστικό φύλλο
 GenericName[ga]=Scarbhileog
+GenericName[oc]=Fuèlha de calcul
 GenericName[pt]=Folha de cálculo
 GenericName[pt_BR]=Folha de cálculo
+GenericName[sv]=Kalkylark
 MimeType=application/vnd.oasis.opendocument.spreadsheet;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro;
 Type=Application
 Icon=kspread
