--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -54,6 +54,8 @@ X-KDE-ExtraNativeMimeTypes=application/vnd.oasis.opendocument.spreadsheet-templa
 GenericName=Spreadsheet
 GenericName[el]=Λογιστικό φύλλο
 GenericName[ga]=Scarbhileog
+GenericName[oc]=Fuèlha de calcul
 GenericName[pt]=Folha de cálculo
 GenericName[pt_BR]=Folha de cálculo
+GenericName[sv]=Kalkylark
 Icon=kspread
