--- a/kword/kword.desktop
+++ b/kword/kword.desktop
@@ -10,8 +10,10 @@ Exec=kword %u
 GenericName=Word Processor
 GenericName[el]=Επεξεργασία κειμένου
 GenericName[ga]=Próiseálaí Focal
+GenericName[oc]=Tractament de tèxt
 GenericName[pt]=Processador de Texto
 GenericName[pt_BR]=Processador de Texto
+GenericName[sv]=Ordbehandling
 Comment=Write text documents
 Comment[ca]=Escriu documents de text
 Comment[de]=Textdokumente verfassen
