SVN_SILENT made messages (.desktop file)

--- a/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
+++ b/kpresenter/templates/Screenpresentations/BlueBreezeSingle.desktop
@@ -60,6 +60,7 @@ Comment[et]=Lihtne esitlus pealkirja ja ühe suure tekstialaga
 Comment[fa]=ارائه‌ای آرام با یک عنوان و تک‌متن بزرگ
 Comment[fi]=Rauhallinen esitys, joka käyttää otsikkoa ja yhtä suurta tekstikenttää
 Comment[fr]=Une présentation apaisée avec un titre et un seul grand texte
+Comment[fy]=In rêstige presintaasje mei in title en genôch romte foar tekst
 Comment[gl]=Unha presentación cun título e unha única área de texto grande
 Comment[he]=מצגת שלווה עם כותרת ואיזור גדול לתמונה
 Comment[hu]=Békés hangulatú bemutató címmel és egy nagy szövege
