--- a/kpresenter/templates/Screenpresentations/TotallyNewProduct.desktop
+++ b/kpresenter/templates/Screenpresentations/TotallyNewProduct.desktop
@@ -20,6 +20,7 @@ Name[eu]=Produktu guztiz berria
 Name[fa]=محصول کاملأ جدید
 Name[fi]=Täysin uusi tuote
 Name[fr]=Produit totalement nouveau
+Name[fy]=Totaal nij produkt
 Name[gl]=Produto Totalmente Novo
 Name[he]=מוצר חדיש
 Name[hi]=पूरी तरह नया उत्पाद
@@ -72,6 +73,7 @@ Comment[et]=Visandlik infoesitlus
 Comment[fa]=ارائه‌ای غیررسمی و green-swirl
 Comment[fi]=OASIS OpenDocument -esitys
 Comment[fr]=Un tourbillon vert, présentation informelle
+Comment[fy]=In ynformele, grienachtige presintaasje
 Comment[gl]=Unha presentación informal, cun remoíño verde
 Comment[hu]=Könnyed stílusú bemutató zöld színű örvényekkel
 Comment[is]=Óformleg kynning með grænum bylgjum
