--- a/kpresenter/templates/Screenpresentations/classroom.desktop
+++ b/kpresenter/templates/Screenpresentations/classroom.desktop
@@ -11,6 +11,7 @@ Name[et]=Klassituba
 Name[fa]=کلاس
 Name[fi]=Luokkahuone
 Name[fr]=Salle de classe
+Name[fy]=Skoalboerd
 Name[ga]=Seomra Ranga
 Name[gl]=Aula
 Name[he]=כיתה
@@ -49,6 +50,7 @@ Comment[et]='dannya' loodud klassituba
 Comment[fa]=کلاس با dannya
 Comment[fi]=Luokkahuone, tehnyt dannya
 Comment[fr]=Salle de classe, par Dannya
+Comment[fy]=Skoalboerd troch dannya
 Comment[gl]=Aula por dannya
 Comment[hu]=Osztályterem, készítette: dannya
 Comment[is]=Skólabekkur eftir dannya
