--- a/kpresenter/templates/Screenpresentations/kde.desktop
+++ b/kpresenter/templates/Screenpresentations/kde.desktop
@@ -18,6 +18,7 @@ Comment[et]=KDE algupärase teemaga esitlus
 Comment[fa]=ارائه‌ای با چهرۀ اصلی KDE
 Comment[fi]=Esitys alkuperäisellä KDE-teemalla
 Comment[fr]=Une présentation avec un thème KDE original
+Comment[fy]=In presintaasje mei it orizjinele tema fan KDE
 Comment[gl]=Unha presentación cun estilo orixinal para KDE
 Comment[he]=מצגת עם ערכת נושא מקורית של KDE
 Comment[hu]=Bemutató eredeti, KDE-szerű stílusban
