--- a/kpresenter/templates/Screenpresentations/savannah.desktop
+++ b/kpresenter/templates/Screenpresentations/savannah.desktop
@@ -5,6 +5,7 @@ Name=Savannah
 Name[de]=Savanne
 Name[el]=Σαβάνα
 Name[fr]=Savane
+Name[fy]=Savanne
 Name[ga]=Sabhána
 Name[hu]=Szavanna
 Name[it]=Savana
@@ -34,6 +35,7 @@ Comment[eo]=Savannah far dannya
 Comment[es]=Savannah por dannya
 Comment[et]='dannya' loodud Savannah
 Comment[fr]=Savane par Dannya
+Comment[fy]=Savanne troch dannya
 Comment[ga]=Sabhána le dannya
 Comment[gl]=Savannah por dannya
 Comment[hu]=Szavanna (készítette: dannya)
