--- a/kpresenter/templates/common_desktop/OneColumnPortrait.desktop
+++ b/kpresenter/templates/common_desktop/OneColumnPortrait.desktop
@@ -20,6 +20,7 @@ Name[eu]=Zutabe bakarreko bertikala
 Name[fa]=طول یک ستون
 Name[fi]=Yksi palsta, pystysuuntainen
 Name[fr]=Une colonne, portrait
+Name[fy]=Ien kolom, portet
 Name[gl]=Unha Coluna en Vertical
 Name[he]=טור אחד לאורך
 Name[hr]=Jedan stupac, portret
@@ -73,6 +74,7 @@ Comment[et]=Esitlus lehekülje pealkirja ja ühe suure tekstialaga (püstpaigutu
 Comment[fa]=ارائه‌ای با یک عنوان صفحه و ناحیۀ متن بزرگ و تک )جهت طولی(
 Comment[fi]=Esitys, jossa otsikko ja yksi suuri pystysuuntainen tekstikenttä
 Comment[fr]=Présentation avec un titre de page et un seul grand texte (portrait)
+Comment[fy]=Presintaasje mei in sidetitel en 1 grut tekst diel (portret-setting)
 Comment[gl]=Presentación con título de páxina é unha única área de texto (con orientación vertical)
 Comment[hu]=Bemutató címoldallal és egy nagyobb szövegterülettel (álló tájolású)
 Comment[is]=Kynning með síðutitli og einu stóru textasvæði (lóðrétt síða)
