--- a/kpresenter/templates/common_desktop/TwoColumnLandscape.desktop
+++ b/kpresenter/templates/common_desktop/TwoColumnLandscape.desktop
@@ -22,6 +22,7 @@ Name[fa]=دو ستون
 Name[fi]=Kaksi palstaa
 Name[fo]=Tveir teigar
 Name[fr]=Deux colonnes
+Name[fy]=Twa kolommen
 Name[gl]=Duas Colunas
 Name[he]=שתי עמודות
 Name[hi]=दो स्तम्भ
@@ -76,6 +77,7 @@ Comment[et]=Esitlus lehekülje pealkirja ja kahe tekstiveeruga
 Comment[fa]=ارائه با یک عنوان صفحه و دو ستون متن
 Comment[fi]=Esitys, jossa otsikko ja kaksi tekstipalstaa
 Comment[fr]=Présentation avec un titre de page et deux colonnes de texte
+Comment[fy]=Presintaasje mei in sidetitel en twa tekstkolommen
 Comment[gl]=Presentación cunha páxina de título e duas colunas de texto
 Comment[he]=מצגת עם כותרת עמוד ושתי עמודות
 Comment[hu]=Bemutató címmel és két szöveges oszloppal
