--- a/kpresenter/templates/common_desktop/emptyLandscape.desktop
+++ b/kpresenter/templates/common_desktop/emptyLandscape.desktop
@@ -17,6 +17,7 @@ Name[eu]=Hutsa
 Name[fa]=خالی
 Name[fi]=Tyhjä
 Name[fr]=Neutre
+Name[fy]=Leech
 Name[ga]=Folamh
 Name[gl]=Valeira
 Name[he]=ריק
@@ -66,6 +67,7 @@ Comment[et]=Tühi esitlus
 Comment[fa]=ارائۀ خالی
 Comment[fi]=Tyhjä esitys
 Comment[fr]=Présentation vide
+Comment[fy]=Lege presintaasje
 Comment[gl]=Presentación valeira
 Comment[he]=מצגת ריקה
 Comment[hu]=Üres bemutató
