--- a/kpresenter/templates/common_desktop/emptyPortrait.desktop
+++ b/kpresenter/templates/common_desktop/emptyPortrait.desktop
@@ -17,6 +17,7 @@ Name[eu]=Huts bertikala
 Name[fa]=پرترۀ خالی
 Name[fi]=Tyhjä pystysuuntainen
 Name[fr]=Portrait, neutre
+Name[fy]=Leech, portet
 Name[gl]=Valeira vertical
 Name[he]=לאורך, ריק
 Name[hr]=Prazno, portret
@@ -61,6 +62,7 @@ Comment[et]=Tühi esitlus (püstpaigutus)
 Comment[fa]=ارائۀ خالی )جهت طولی(
 Comment[fi]=Tyhjä esitys (pystysuuntainen)
 Comment[fr]=Présentation vide (portrait)
+Comment[fy]=Lege presintaasje (portet-setting)
 Comment[gl]=Presentación valeira (orientada en vertical)
 Comment[hu]=Üres bemutató (álló tájolású)
 Comment[is]=Tóm kynning (lóðrétt síða)
