--- a/kspread/plugins/scripting/kspreadscripting.desktop
+++ b/kspread/plugins/scripting/kspreadscripting.desktop
@@ -11,6 +11,7 @@ Name[es]=Complemento para guiones
 Name[et]=Skriptiplugin
 Name[fa]=وصلۀ دست‌نوشته
 Name[fr]=Module de scriptage
+Name[fy]=Skriptplugin
 Name[ga]=Breiseán scriptithe
 Name[gl]=Plugin de programación
 Name[he]=תוסף לתסריטים
@@ -47,6 +48,7 @@ Comment[es]=Permite la ejecución de guiones
 Comment[et]=Võimaldab skriptide käivitamist
 Comment[fa]=اجازۀ اجرای دست‌نوشته‌ها
 Comment[fr]=Permet d'exécuter des scripts
+Comment[fy]=Hjirmei kinne skripts útfierd wurde
 Comment[gl]=Permite executar guións
 Comment[he]=אפשרות להרצת תסריטים
 Comment[hu]=Lehetővé teszi szkriptek végrehajtását
