--- a/kspread/templates/Business/BalanceSheet.desktop
+++ b/kspread/templates/Business/BalanceSheet.desktop
@@ -16,6 +16,7 @@ Name[eu]=Balantze-orria
 Name[fa]=ترازنامه
 Name[fi]=Tase
 Name[fr]=Feuille balance comptable
+Name[fy]=Balans-wurkblêd
 Name[gl]=Folla de Balance
 Name[hi]=बैलेन्स शीट
 Name[hr]=Bilance
