--- a/kspread/templates/Business/PackingSlip.desktop
+++ b/kspread/templates/Business/PackingSlip.desktop
@@ -15,6 +15,7 @@ Name[eu]=Entrega-orria
 Name[fa]=بسته‌بندی لغزش
 Name[fi]=Pakkauslista
 Name[fr]=Bon de livraison
+Name[fy]=Pakbon
 Name[gl]=Albará
 Name[hi]=पैकेजिंग स्लिप
 Name[hu]=Csomagcímke
