--- a/kspread/templates/Business/PriceQuotation.desktop
+++ b/kspread/templates/Business/PriceQuotation.desktop
@@ -16,6 +16,7 @@ Name[eu]=Kotizazioa
 Name[fa]=برآورد هزینه
 Name[fi]=Tarjous
 Name[fr]=Chiffrage
+Name[fy]=Priisopjefte
 Name[gl]=Orzamento
 Name[hi]=क़ीमत भावपत्र
 Name[hu]=Árcédula
