--- a/kspread/templates/HomeFamily/BMI.desktop
+++ b/kspread/templates/HomeFamily/BMI.desktop
@@ -20,6 +20,7 @@ Name[eu]=BMI kalkulagailua
 Name[fa]=ماشین‌حساب BMI
 Name[fi]=BMI laskin
 Name[fr]=Calculatrice BMI
+Name[fy]=BMI-berekkender
 Name[gl]=Calculadora IMC
 Name[he]=מחשבון BMI
 Name[hi]=बीएमआई केल्कुलेटर
@@ -66,6 +67,7 @@ Comment[es]=Calculadora sencilla de índices de masas de cuerpos
 Comment[et]=Lihtne kehakaalu indeksi kalkulaator
 Comment[fa]=ماشین‌حساب نمایۀ حجم بدنۀ ساده
 Comment[fr]=Simple calculatrice d'index de masse corporelle.
+Comment[fy]=Ienfâldige berekkening fan lichemgewichtyndeks (BMI)
 Comment[gl]=Calculadora Simples do Índice de Masa Corporal
 Comment[he]=מחשבון פשוט לחישוב מדד מסת גוף (BMI).
 Comment[hu]=Testtömegindex-számoló
