--- a/kspread/templates/HomeFamily/VacationChecklist.desktop
+++ b/kspread/templates/HomeFamily/VacationChecklist.desktop
@@ -17,6 +17,7 @@ Name[eu]=Oporretako zerrenda
 Name[fa]=فهرست بررسی تعطیلی
 Name[fi]=Loman tarkistuslista
 Name[fr]=Checklist des vacances
+Name[fy]=Fakânsje kontrôlelist
 Name[gl]=Lista para Viaxes
 Name[he]=בדיקת חופשות
 Name[hi]=अवकाश जाँच-सूची
