--- a/kugar/kudesigner/kudesigner.desktop
+++ b/kugar/kudesigner/kudesigner.desktop
@@ -20,6 +20,7 @@ Name[es]=Diseñador Kugar
 Name[eu]=Kugar diseinatzailea
 Name[fa]=طراح Kugar
 Name[fr]=Concepteur Kugar
+Name[fy]=Kugar ûntwerp
 Name[gl]=Deseñados de Kugar
 Name[hi]=कुगर डिज़ाइनर
 Name[hr]=Kugar dizajner
@@ -62,6 +63,7 @@ GenericName[eu]=Txosten-txantiloia
 GenericName[fa]=قالب گزارش
 GenericName[fi]=Raporttipohja
 GenericName[fr]=Modèle de rapport
+GenericName[fy]=Rapportsjabloan
 GenericName[gl]=Modelo de informe
 GenericName[he]=תבנית דו"ח
 GenericName[hu]=Jelentéstervező
@@ -109,6 +111,7 @@ Comment[eu]=Txosten-diseinatzailea
 Comment[fa]=طراح گزارش
 Comment[fi]=Raporttisuunittelija
 Comment[fr]=Générateur de rapports
+Comment[fy]=Rapportengenerator
 Comment[gl]=Deseñador de informes
 Comment[he]=מעצב דו"חות
 Comment[hi]=रपट डिज़ाइनर
