--- a/kugar/part/kugarpart.desktop
+++ b/kugar/part/kugarpart.desktop
@@ -14,6 +14,7 @@ Name[eu]=KOffice-en txosten sortzailearen osagaia
 Name[fa]=مؤلفۀ مولد گزارش KOffice
 Name[fi]=KOfficen raporttigeneraattori
 Name[fr]=Composant générateur de rapports de KOffice
+Name[fy]=KOffice rapportgeneratorkomponint
 Name[gl]=Componente de Xeración de Informes de KOffice
 Name[he]=רכיב של KOffice ליצירת דו"חות
 Name[hi]=के-ऑफ़िस रपट सृजक अवयव
@@ -70,6 +71,7 @@ GenericName[eu]=Txosten-sortzailea
 GenericName[fa]=مولد گزارش
 GenericName[fi]=Raporttigeneraattori
 GenericName[fr]=Générateur de rapports
+GenericName[fy]=Reportgenerator
 GenericName[gl]=Xerador de informes
 GenericName[he]=יוצר דו"חות
 GenericName[hi]=रपट सृजक
