--- a/kword/kwmailmerge.desktop
+++ b/kword/kwmailmerge.desktop
@@ -19,6 +19,7 @@ Comment[eu]=KWord-en posta bateratzeko plugina
 Comment[fa]=وصلۀ ادغام پستی KWord
 Comment[fi]=KWord-postituslaajennus
 Comment[fr]=Module fusion de courrier pour KWord
+Comment[fy]=KWord-plugin foar standertbrieven (mailmerge)
 Comment[ga]=Breiseán postchumaisc KWord
 Comment[gl]=Plugin de Circulares de KWord
 Comment[he]=תוסף מיזוג דואר ל־KWord
