--- a/kword/kword.desktop
+++ b/kword/kword.desktop
@@ -30,6 +30,7 @@ GenericName[fa]=پردازش واژه
 GenericName[fi]=Tekstinkäsittely
 GenericName[fo]=Tekstviðgerð
 GenericName[fr]=Traitement de texte
+GenericName[fy]=Tekstferwurker
 GenericName[ga]=Próiseáil Focal
 GenericName[gl]=Procesamento de Texto
 GenericName[he]=עיבוד תמלילים
