--- a/kword/mailmerge/kabc/kwmailmerge_kabc.desktop
+++ b/kword/mailmerge/kabc/kwmailmerge_kabc.desktop
@@ -19,6 +19,7 @@ Name[eu]=KDE-ren helbide-liburuaren plugina
 Name[fa]=وصلۀ کتاب نشانی KDE
 Name[fi]=KDE:n osoitekirjan liitännäinen
 Name[fr]=Module externe de carnet d'adresses de KDE
+Name[fy]=Adresboekplugin foar KDE
 Name[gl]=Plugin do Libro de Enderezos de KDE
 Name[he]=תוסף של פנקס הכתובות של KDE
 Name[hi]=केडीई पतापुस्तिका प्लगिन
@@ -67,6 +68,7 @@ Comment[eu]=Datu-iturburu honek zure KDE-ko helbide-liburuko sarrerak erabiltzek
 Comment[fa]=این نوع متن داده‌ به شما اجازۀ استفاده از مدخلهای کتاب نشانی KDE را می‌دهد.
 Comment[fi]=Tämän tietolähteen avulla voit käyttää KDE:n osoitekirjan tietoja.
 Comment[fr]=Ce type de source de données vous permet d'utiliser votre carnet d'adresses KDE.
+Comment[fy]=Mei dizze plugin ha jo taging ta jo KDE adresboek.
 Comment[gl]=Este tipo de fonte de datos armacena os datos directamente no Libro de Enderezos de KDE.
 Comment[he]=טיפוס מקור נתונים זה מאפשר לך להשתמש ברשומות שלך מתוך פנקס הכתובות של KDE.
 Comment[hi]=यह डाटा स्रोत क़िस्म आपको केडीई पता पुस्तिका प्रविष्टियों को इस्तेमाल करने देती है.
