--- a/kword/mailmerge/kspread/kwmailmerge_kspread.desktop
+++ b/kword/mailmerge/kspread/kwmailmerge_kspread.desktop
@@ -17,6 +17,7 @@ Name[eu]=KSpread-en taula-iturburua
 Name[fa]=متن جدول KSpread
 Name[fi]=KSpread-taulukkolähde
 Name[fr]=Source de tableaux KSpread
+Name[fy]=KSpread Tabelboarne
 Name[gl]=Fonte en Táboa de KSpread
 Name[he]=מקור טבלאות של KSpread
 Name[hi]=के-स्प्रेड तालिका स्रोत
@@ -63,6 +64,7 @@ Comment[eu]=Datu-iturburu honek kspread fitxategi bateko sarrerako erabiltzeko a
 Comment[fa]=این نوع متن داده‌ به شما اجازۀ استفاده از مدخلهایتان از یک پروندۀ kspread را می‌دهد.
 Comment[fi]=Tämän tietolähteen avulla voit käyttää tietoja KSPread-taulukosta.
 Comment[fr]=Ce type de source de données vous permet d'utiliser vos saisies depuis un fichier KSpread.
+Comment[fy]=Mei dit type gegevensboarne kinne jo, jo yngongen út in Kspreadtriem brûke.
 Comment[gl]=Este tipo de fonte de datos permite utilizar datos dun ficheiro de KSpread.
 Comment[he]=טיפוס מקור נתונים זה מאפשר לך להשתמש ברשומות שלך מתוך קובץ של kspread.
 Comment[hi]=यह डाटा स्रोत क़िस्म आपको केडीई पता के-स्प्रेड फ़ाइल की प्रविष्टियों को इस्तेमाल करने देती है.
