--- a/kword/mailmerge/kwserialletter_classic.desktop
+++ b/kword/mailmerge/kwserialletter_classic.desktop
@@ -22,6 +22,7 @@ Name[eu]=Barneko biltegia
 Name[fa]=ذخیره‌سازی درونی
 Name[fi]=Sisäinen tietovarasto
 Name[fr]=Stockage interne
+Name[fy]=Ynterne opslach
 Name[gl]=Armacenamento Interno
 Name[he]=איחסון פנימי
 Name[hi]=आंतरिक भंडार
@@ -79,6 +80,7 @@ Comment[eu]=Datu-iturburu honek datuak zuzenean kspread fitxategi batean gordetz
 Comment[fa]=این نوع متن داده، مستقیماً داده را در پروندۀ KWord ذخیره می‌کند
 Comment[fi]=Tämä tietolähde tallentaa tiedot suoraan KWord-tiedostoon.
 Comment[fr]=Ce type de source de données enregistre les données directement dans le document KWord
+Comment[fy]=Dit type gegevensboarne bewarret de gegevens rjochtstreeeks op yn in KWord-triem.
 Comment[gl]=Este tipo de fonte de datos armacena os datos directamente no ficheiro de KWord
 Comment[he]=טיפוס מקור נתונים זה מאחסן את הנתונים ישירות בקובץ של KWord
 Comment[hi]=यह डेटा स्रोत क़िस्म डेटा को सीधे ही के-वर्ड फ़ाइल में भंडारित करती है
