--- a/kword/templates/Wordprocessing/A4.desktop
+++ b/kword/templates/Wordprocessing/A4.desktop
@@ -14,6 +14,7 @@ Name[es]=Documento vacío
 Name[et]=Tühi dokument
 Name[fa]=سند خالی
 Name[fr]=Document vide
+Name[fy]=Leech dokumint
 Name[ga]=Cáipéis Fholamh
 Name[gl]=Documento Valeiro
 Name[he]=מסמך ריק
@@ -53,6 +54,7 @@ Comment[es]=Crea un documento A4 vacío, con un pequeño margen de página.
 Comment[et]=Loob tühja A4 dokumendi väikese veerisega.
 Comment[fa]=یک سند خالی A4 با یک حاشیۀ کوچک صفحه ایجاد می‌کند.
 Comment[fr]=Crée un document A4 vide avec une petite marge
+Comment[fy]=Makket in leech A4-documint oan mei in lytse sidemmarzje.
 Comment[gl]=Cría un documento A4 en branco, cunha pequena marxe na páxina.
 Comment[hu]=Létrehoz egy üres A4-es dokumentumot, keskeny margóval
 Comment[is]=Býr til tómt A4 skjal með litlum spássíum.
