--- a/kword/templates/Wordprocessing/ColorfulA4.desktop
+++ b/kword/templates/Wordprocessing/ColorfulA4.desktop
@@ -15,6 +15,7 @@ Name[es]=Documento a todo color
 Name[et]=Värviline dokument
 Name[fa]=سند رنگی
 Name[fr]=Document coloré
+Name[fy]=Kleurryk dokumint
 Name[ga]=Cáipéis Ildathach
 Name[gl]=Documento Colorido
 Name[he]=מסמך צבעוני
@@ -56,6 +57,7 @@ Comment[et]=Kahe veeruga dokument stiilselt värviliste päiste ja jalustega
 Comment[fa]=قالب دو ستونی با عناوین و زیرنویسهای رنگی شیک
 Comment[fi]=Kaksipalstainen pohja, tyylikäät värilliset ylä- ja alatunnisteet
 Comment[fr]=Un modèle à deux colonnes avec des en-têtes colorées et des pieds de page
+Comment[fy]=In twakoloms sjabloan mei stylfolle kleurde kop- en foetteksten
 Comment[gl]=Un modelo a dúas colunas, con cabeceiras e rodapés con estilos coloridos
 Comment[hu]=Kétoszlopos sablon stílusos, színes fejléccel és lábléccel
 Comment[is]=Tveggja dálka snið með skreytilegum hausum og fótum
