--- a/kword/templates/Wordprocessing/ProfessionalA4.desktop
+++ b/kword/templates/Wordprocessing/ProfessionalA4.desktop
@@ -14,6 +14,7 @@ Name[es]=Carta profesional
 Name[et]=Professionaalne
 Name[fa]=نامۀ حرفه‌ای
 Name[fr]=Lettre professionnelle
+Name[fy]=profesjonele  brief
 Name[ga]=Litir Phroifisiúta
 Name[gl]=Carta Profisional
 Name[he]=מכתב מקצועי
@@ -54,6 +55,7 @@ Comment[et]=Loob dokumendi professionaalsetele dokumentidele iseloomulike laiade
 Comment[fa]=سندی خالی با حاشیه‌های عریض برای اسناد به نظر حرفه‌ای ایجاد می‌کند
 Comment[fi]=Luo tyhjän asiakirjan, jossa on leveät marginaalit
 Comment[fr]=Crée un document vide avec de grandes marges pour une apparence professionnelle
+Comment[fy]=Makket in leech dokumint oan mei brede marzjes foar in profesioneel úterlik
 Comment[gl]=Cría un documento en branco con marxes amplas para documentos con aspeito profisional
 Comment[hu]=Létrehoz egy üres dokumentumot széles margókkal hivatalos dokumentumokhoz
 Comment[is]=Býr til tómt skjal með breiðum spássíum fyrir atvinnumannalegt bréf
