--- a/mimetypes/kde33/vnd.oasis.opendocument.chart.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.chart.desktop
@@ -17,6 +17,7 @@ Comment[et]=OASIS OpenDocument diagramm
 Comment[eu]=OASIS OpenDocument grafika
 Comment[fa]=نمودار OASIS OpenDocument
 Comment[fr]=Diagramme OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint-grafyk
 Comment[ga]=Cairt OpenDocument OASIS
 Comment[gl]=Gráfico OASIS OpenDocument
 Comment[he]=תרשים של OASIS OpenDocument
