--- a/mimetypes/kde33/vnd.oasis.opendocument.formula.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.formula.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument formula
 Comment[fa]=فرمول OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -kaava
 Comment[fr]=Formule OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint-formule
 Comment[ga]=Foirmle OpenDocument OASIS
 Comment[gl]=Fórmula OASIS OpenDocument
 Comment[he]=נוסחה של OASIS OpenDocument
