--- a/mimetypes/kde33/vnd.oasis.opendocument.graphics-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.graphics-template.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument-en grafikoen txantiloia
 Comment[fa]=قالب نگاره‌سازی OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -grafiikkapohja
 Comment[fr]=Modèle de graphiques OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint-illustraasjesjabloan
 Comment[ga]=Teimpléad Grafaice OpenDocument OASIS
 Comment[gl]=Modelo de Debuxo OASIS OpenDocument
 Comment[he]=תבנית גרפיקה של OASIS OpenDocument
