--- a/mimetypes/kde33/vnd.oasis.opendocument.image.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.image.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument irudia
 Comment[fa]=تصویر OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument- kuva
 Comment[fr]=Image OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint-ôfbylding
 Comment[ga]=Íomhá OpenDocument OASIS
 Comment[gl]=Imaxe OASIS OpenDocument
 Comment[he]=תמונה של OASIS OpenDocument
