--- a/mimetypes/kde33/vnd.oasis.opendocument.presentation-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.presentation-template.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument aurkezpen-txantiloia
 Comment[fa]=قالب ارائۀ OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -esityspohja
 Comment[fr]=Modèle de présentation OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Presintaasjesjabloan
 Comment[ga]=Teimpléad Láithreoireachta OpenDocument OASIS
 Comment[gl]=Modelo de Presentación OASIS OpenDocument
 Comment[he]=תבנית מצגת של OASIS OpenDocument
