--- a/mimetypes/kde33/vnd.oasis.opendocument.presentation.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.presentation.desktop
@@ -17,6 +17,7 @@ Comment[et]=OASIS OpenDocument esitlus
 Comment[eu]=OASIS OpenDocument aurkezpena
 Comment[fa]=ارائۀ OASIS OpenDocument
 Comment[fr]=Présentation OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Presintaasje
 Comment[ga]=Láithreoireacht OpenDocument OASIS
 Comment[gl]=Presentación OASIS OpenDocument
 Comment[he]=מצגת של OASIS OpenDocument
