--- a/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet-template.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument kalkulu-orrien txantiloia
 Comment[fa]=قالب صفحه گستردۀ OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -taulukkolaskentapohja
 Comment[fr]=Modèle de tableur OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Rekkenboerdsjabloan
 Comment[ga]=Teimpléad Scarbhileoige OpenDocument OASIS
 Comment[gl]=Modelo de Folla de Cálculo OASIS OpenDocument
 Comment[he]=תבנית גיליון אלקטרוני של OASIS OpenDocument
