--- a/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.spreadsheet.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument kalkulu-orria
 Comment[fa]=صفحه گستردۀ OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -taulukkolaskenta
 Comment[fr]=Tableur OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Rekkenboerd 
 Comment[ga]=Scarbhileog OpenDocument OASIS
 Comment[gl]=Folla de Cálculo OASIS OpenDocument
 Comment[he]=גיליון אלקטרוני של OASIS OpenDocument
