--- a/mimetypes/kde33/vnd.oasis.opendocument.text-template.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.text-template.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument testu-txantiloia
 Comment[fa]=قالب متن OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -tekstimallipohja
 Comment[fr]=Modèle de texte OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Tekstsjabloan
 Comment[ga]=Teimpléad Téacs OpenDocument OASIS
 Comment[gl]=Modelo de Texto OASIS OpenDocument
 Comment[he]=תבנית מסמך טקסט של OASIS OpenDocument
