--- a/mimetypes/kde33/vnd.oasis.opendocument.text.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.text.desktop
@@ -18,6 +18,7 @@ Comment[eu]=OASIS OpenDocument testua
 Comment[fa]=متن OASIS OpenDocument
 Comment[fi]=OASIS OpenDocument -teksti
 Comment[fr]=Texte OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint Tekst
 Comment[ga]=Téacs OpenDocument OASIS
 Comment[gl]=Texto OASIS OpenDocument
 Comment[he]=מסמך טקסט של OASIS OpenDocument
