--- a/mimetypes/kde351/x-raw.desktop
+++ b/mimetypes/kde351/x-raw.desktop
@@ -14,6 +14,7 @@ Comment[es]=Imagen RAW de cámara
 Comment[et]=Kaamera toorpilt
 Comment[fa]=تصویر دوربین RAW
 Comment[fr]=Image RAW d'appareil photo
+Comment[fy]=RAW kamera-ôfbylding
 Comment[ga]=Íomhá Cheamara RAW
 Comment[gl]=Imaxe RAW de Cámara
 Comment[he]=תמונה של מצלמת מסוג RAW
