--- a/servicetypes/kofilter.desktop
+++ b/servicetypes/kofilter.desktop
@@ -23,6 +23,7 @@ Comment[fa]=پالایۀ KOffice
 Comment[fi]=KOffice-suodin
 Comment[fo]=KSkrivstovu-filtur
 Comment[fr]=Filtre KOffice
+Comment[fy]=KOffice filter
 Comment[ga]=Scagaire KOffice
 Comment[gl]=Filtro de KOffice
 Comment[he]=מסנן של KOffice
