--- a/servicetypes/kofilterwrapper.desktop
+++ b/servicetypes/kofilterwrapper.desktop
@@ -18,6 +18,7 @@ Comment[eu]=KOffice iragazkiaren zorroa
 Comment[fa]=سطربند پالایۀ KOffice
 Comment[fi]=KOfficen suotimien välitysohjelma
 Comment[fr]=Conteneur de filtre KOffice
+Comment[fy]=KOffice filterwrapper
 Comment[gl]=Interface para un Filtro de KOffice
 Comment[he]=עטיפת מסנן של KOffice
 Comment[hi]=के-ऑफ़िस फ़िल्टर रैपर
