--- a/templates/Illustration.desktop
+++ b/templates/Illustration.desktop
@@ -15,6 +15,7 @@ Name[eu]=Irudi-dokumentua...
 Name[fa]=سند شکل...
 Name[fi]=Illustrator-asiakirja
 Name[fr]=Document d'illustration...
+Name[fy]=Illustraasjefokumint...
 Name[gl]=Documento de Ilustración...
 Name[he]=מסמך איור...
 Name[hi]=इलस्ट्रेशन दस्तावेज़...
@@ -65,6 +66,7 @@ Comment[eu]=Karbon14 dokumentu berria:
 Comment[fa]=سند Karbon14 جدید:
 Comment[fi]=Uusi Karbon14-asiakirja:
 Comment[fr]=Nouveau document Karbon14 :
+Comment[fy]=Nij Karbon14-dokumint:
 Comment[ga]=Cáipéis nua Karbon14:
 Comment[gl]=Novo documento de Karbon14:
 Comment[he]=מסמך Karbon14 חדש
