--- a/templates/Presentation.desktop
+++ b/templates/Presentation.desktop
@@ -16,6 +16,7 @@ Name[eu]=Aurkezpen-dokumentua...
 Name[fa]=سند ارائه...
 Name[fi]=Esitysasiakirja...
 Name[fr]=Document de présentation...
+Name[fy]=Presintaasjefokumint...
 Name[gl]=Documento de presentación...
 Name[he]=מסמך מצגת...
 Name[hi]=प्रेजेन्टेशन दस्तावेज़...
@@ -69,6 +70,7 @@ Comment[eu]=KPresenter-en aurkezpen-dokumentu berria:
 Comment[fa]=سند جدید ارائۀ KPresenter:
 Comment[fi]=Uusi KPresenter-asiakirja:
 Comment[fr]=Nouveau document de présentation KPresenter :
+Comment[fy]=Nij KPresenter-presintaasjedokumint:
 Comment[gl]=Novo documento de KPresenter:
 Comment[he]=מסמך מצגת חדש של KPresenter
 Comment[hi]=नया के-प्रेजेन्टर दस्तावेज़:
