--- a/templates/SpreadSheet.desktop
+++ b/templates/SpreadSheet.desktop
@@ -17,6 +17,7 @@ Name[eu]=Kalkulu-orri dokumentua...
 Name[fa]=سند صفحه گسترده...
 Name[fi]=Taulukkolaskenta-asiakirja...
 Name[fr]=Document Feuille de calcul...
+Name[fy]=Spreadsheetdokumint...
 Name[gl]=Documento de Folla de Cálculo...
 Name[he]=מסמך גיליון אלקטרוני...
 Name[hi]=स्प्रेडशीट दस्तावेज़...
@@ -70,6 +71,7 @@ Comment[eu]=KSpread dokumentu berria:
 Comment[fa]=سند جدید KSpread:
 Comment[fi]=Uusi KSpread-asiakirja:
 Comment[fr]=Nouveau document KSpread :
+Comment[fy]=Nij KSpreaddokumint:
 Comment[ga]=Cáipéis nua KSpread:
 Comment[gl]=Novo documento de KSpread:
 Comment[he]=מסמך חדש של KSpread
