--- a/tools/kfile-plugins/abiword/kfile_abiword.desktop
+++ b/tools/kfile-plugins/abiword/kfile_abiword.desktop
@@ -14,6 +14,7 @@ Name[et]=Abiword'i info
 Name[fa]=اطلاعات Abiword
 Name[fi]=Abiword-tiedot
 Name[fr]=Informations sur Abiword
+Name[fy]=Abiword ynfo
 Name[ga]=Eolas faoi Abiword
 Name[gl]=Información de Abiword
 Name[he]=מידע של Abiword
