--- a/tools/kthesaurus/KThesaurus.desktop
+++ b/tools/kthesaurus/KThesaurus.desktop
@@ -34,6 +34,7 @@ GenericName[eu]=Erlazionatutako hitzak
 GenericName[fa]=واژه‌های مربوط
 GenericName[fi]=Samankaltaiset sanat
 GenericName[fr]=Mots liés
+GenericName[fy]=Ferlykbere wurden
 GenericName[gl]=Palabras Relacionadas
 GenericName[he]=מילים קשורות
 GenericName[hi]=सम्बन्धित शब्द
