--- a/tools/thumbnail/kofficethumbnail.desktop
+++ b/tools/thumbnail/kofficethumbnail.desktop
@@ -21,6 +21,7 @@ Name[fa]=پرونده‌های KOffice
 Name[fi]=KOffice-tiedostot
 Name[fo]=KSkrivstovu-fílir
 Name[fr]=Fichiers KOffice
+Name[fy]=KOffice-triemmen
 Name[ga]=Comhaid KOffice
 Name[gl]=Ficheiros de KOffice
 Name[he]=קבצי KOffice
