--- a/kpresenter/templates/common_desktop/OneColumnLandscape.desktop
+++ b/kpresenter/templates/common_desktop/OneColumnLandscape.desktop
@@ -22,6 +22,7 @@ Name[fa]=یک ستون
 Name[fi]=Yksi palsta
 Name[fo]=Ein teigur
 Name[fr]=Une colonne
+Name[fy]=Ien kolom
 Name[gl]=Unha Coluna
 Name[he]=טור אחד
 Name[hr]=Jedan stupac
@@ -77,6 +78,7 @@ Comment[et]=Esitlus lehekülje pealkirja ja ühe suure tekstialaga
 Comment[fa]=ارائه‌ای با یک عنوان صفحه و ناحیۀ متن بزرگ و تک
 Comment[fi]=Esitys, jossa otsikko ja yksi suuri tekstikenttä
 Comment[fr]=Présentation avec un titre de page et un seul grand texte
+Comment[fy]=Presintaasje mei in sidetitel en in grutte romte foar tekst
 Comment[gl]=Presentación con título de páxina e unha única área de texto grande
 Comment[he]=מצגת עם כותרת עמוד ואיזור גדול לטקסט
 Comment[hu]=Bemutató címoldallal és egy nagyobb szövegterülettel
