--- a/kpresenter/templates/common_desktop/TitleLandscape.desktop
+++ b/kpresenter/templates/common_desktop/TitleLandscape.desktop
@@ -21,6 +21,7 @@ Name[fa]=عنوان
 Name[fi]=Otsikko
 Name[fo]=Heiti
 Name[fr]=Titre
+Name[fy]=Titel
 Name[ga]=Teideal
 Name[gl]=Título
 Name[he]=כותרת
@@ -77,6 +78,7 @@ Comment[es]=Presentación con un título de página
 Comment[et]=Esitlus lehekülje pealkirjaga
 Comment[fa]=ارائه با یک عنوان صفحه
 Comment[fr]=Présentation avec un titre de page
+Comment[fy]=Presintaasje mei in sidetitel
 Comment[gl]=Presentación cunha páxina de título
 Comment[he]=מצגת עם כותרת עמוד
 Comment[hu]=Bemutató címoldallal
