--- a/kpresenter/templates/common_desktop/TitlePortrait.desktop
+++ b/kpresenter/templates/common_desktop/TitlePortrait.desktop
@@ -20,6 +20,7 @@ Name[eu]=Izenburu bertikala
 Name[fa]=طول عنوان
 Name[fi]=Otsikko pystysuuntainen
 Name[fr]=Titre, portrait
+Name[fy]=Titel,  portret
 Name[gl]=Título en Vertical
 Name[he]=כותרת לאורך
 Name[hr]=Naslov, portret
@@ -73,6 +74,7 @@ Comment[et]=Esitlus lehekülje pealkirjaga (püstpaigutus)
 Comment[fa]=ارائه با یک عنوان صفحه )جهت طولی(
 Comment[fi]=Esitys, jossa otsikko (pystysuuntainen)
 Comment[fr]=Présentation avec un titre de page (portrait)
+Comment[fy]=Presintaasje mei in sidetitel (portet-setting)
 Comment[gl]=Presentación cunha páxina de título (orientada en vertical)
 Comment[hu]=Bemutató címoldallal (álló tájolással)
 Comment[is]=Kynning með síðutitli (lóðrétt síða)
