--- a/kpresenter/templates/common_desktop/TwoColumnPortrait.desktop
+++ b/kpresenter/templates/common_desktop/TwoColumnPortrait.desktop
@@ -20,6 +20,7 @@ Name[eu]=Bi zutabe bertikala
 Name[fa]=طول دو ستون
 Name[fi]=Kaksi palstaa, pystysuuntainen
 Name[fr]=Deux colonnes, portrait
+Name[fy]=Twa kolommen, portet
 Name[gl]=Duas Colunas en Vertical
 Name[he]=שני טורים לאורך
 Name[hr]=Dva stupca, portret
@@ -73,6 +74,7 @@ Comment[et]=Esitlus lehekülje pealkirjaga ja kahe tekstiveeruga (püstpaigutus)
 Comment[fa]=ارائه با یک عنوان صفحه و دو ستون متن )جهت طولی(
 Comment[fi]=Esitys, jossa otsikko ja kaksi tekstipalstaa (pystysuuntainen)
 Comment[fr]=Présentation avec un titre de page et deux colonnes de texte (portrait)
+Comment[fy]=Presintaasje mei in sidetitel en twa tekstkolommen (portret-setting)
 Comment[gl]=Presentación cunha páxina de título e duas colunas de texto (orientadas en vertical)
 Comment[hu]=Bemutató címmel és két szöveges oszloppal (álló)
 Comment[is]=Kynning með síðutitli og tveimur textadálkum (lóðrétt síða)
