--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -31,6 +31,7 @@ GenericName[fa]=صفحات گسترده
 GenericName[fi]=Laskentataulukot
 GenericName[fo]=Rokniark
 GenericName[fr]=Tableurs
+GenericName[fy]=Rekkenboerden
 GenericName[ga]=Scarbhileoga
 GenericName[gl]=Follas de cálculo
 GenericName[he]=גיליונות אלקטרוניים
