--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -14,6 +14,7 @@ Name[eu]=KOffice kalkulu-orri osagaia
 Name[fa]=مؤلفۀ صفحه گستردۀ KOffice
 Name[fi]=KOfficen taulukkolaskentaohjelma
 Name[fr]=Composant tableur de KOffice
+Name[fy]=Koffice rekkenboerd komponint
 Name[gl]=Componente de Folla de Cálculo de KOffice
 Name[he]=רכיב של KOffice לגיליונות אלקטרוניים
 Name[hi]=के-ऑफ़िस स्प्रेडशीट अवयव
@@ -74,6 +75,7 @@ GenericName[fa]=صفحات گسترده
 GenericName[fi]=Laskentataulukot
 GenericName[fo]=Rokniark
 GenericName[fr]=Tableurs
+GenericName[fy]=Rekkenboerden
 GenericName[ga]=Scarbhileoga
 GenericName[gl]=Follas de cálculo
 GenericName[he]=גיליונות אלקטרוניים
