--- a/kspread/templates/Business/Invoice.desktop
+++ b/kspread/templates/Business/Invoice.desktop
@@ -18,6 +18,7 @@ Name[eu]=Faktura
 Name[fa]=صورت‌حساب
 Name[fi]=Lasku
 Name[fr]=Rentrées
+Name[fy]=Rekkening
 Name[gl]=Factura
 Name[he]=חשבונית
 Name[hi]=बीजक (इनवायस)
