--- a/kugar/part/kugar.desktop
+++ b/kugar/part/kugar.desktop
@@ -29,6 +29,7 @@ GenericName[eu]=Txosten-sortzailea
 GenericName[fa]=مولد گزارش
 GenericName[fi]=Raporttigeneraattori
 GenericName[fr]=Générateur de rapports
+GenericName[fy]=Reportgenerator
 GenericName[gl]=Xerador de informes
 GenericName[he]=יוצר דו"חות
 GenericName[hi]=रपट सृजक
