--- a/kword/kwordpart.desktop
+++ b/kword/kwordpart.desktop
@@ -15,6 +15,7 @@ Name[eu]=KOffice-en testu-prozesadore osagaia
 Name[fa]=مؤلفۀ پردازش واژۀ KOffice
 Name[fi]=KOfficen tekstinkäsittelyohjelma
 Name[fr]=Composant traitement de texte de KOffice
+Name[fy]=KOffice Tekstferwurkingskomponint
 Name[gl]=Componente de Procesamento de Texto de KOffice
 Name[he]=רכיב של KOffice לעיבוד תמלילים
 Name[hi]=के-ऑफ़िस शब्द संसाधक अवयव
@@ -67,6 +68,7 @@ GenericName[et]=Tekstidokumendid
 GenericName[fa]=اسناد متنی
 GenericName[fi]=Tekstiasiakirjat
 GenericName[fr]=Documents texte
+GenericName[fy]=Tekstdokuminten
 GenericName[ga]=Cáipéisí Téacs
 GenericName[gl]=Documentos de Texto
 GenericName[hr]=Tekstualni dokumenti
