--- a/kword/mailmerge/sql/kwserialletter_qtsqldb.desktop
+++ b/kword/mailmerge/sql/kwserialletter_qtsqldb.desktop
@@ -17,6 +17,7 @@ Name[eu]=Qt-SQL iturburua (taula bakarra)
 Name[fa]=متن Qt-SQL )جدول تک (
 Name[fi]=Qt-SQL lähde (ykai taulu)
 Name[fr]=Source Qt-SQL (table simple)
+Name[fy]=Qt-SQL-boarne (inkelfâldige tabel)
 Name[gl]=Fonte de Qt-SQL (táboa única)
 Name[he]=מקור Qt-SQL (טבלה בודדת)
 Name[hr]=Qt-SQL izvor (jedna tablica)
@@ -64,6 +65,7 @@ Comment[eu]=Datu-iturburu honek SQL zerbitzari batean gordetako SQL datu-baseko 
 Comment[fa]=این نوع متن داده به شما اجازۀ استفاده از جدولهای دادگان SQL ذخیره‌شده در یک کارساز SQL را می‌دهد. بسته به پیکربندی سیستمتان، MySQL، PostgreSQL و UnixODBC، در میان پایانه‌های دادگان پشتیبانی‌شده می‌باشند. حتی ممکن است بیشتر باشند )Oracle در نسخه‌های تجاری Qt یا پایانه‌های گروه 3rd(.
 Comment[fi]=Tämä tietolähde käyttää SQL-tietokantojen tauluja. Riippuen järjestelmäsi asetuksista tuetaan MySQL, Postgres ja UnixODBC -tietokantoja. Kantoja voi myös olla enemmän (Oracle, jos omistat kaupallisen version QT:sta).
 Comment[fr]=Ce type de source de données vous permet d'utiliser des tables de base de données SQL stockées sur un serveur SQL. Selon votre configuration, ces tables peuvent venir de MySQL, PostgreSQL et UnixODBC, et d'autres encore (comme Oracle, si vous avez la licence commerciale de Qt, par exemple).
+Comment[fy]=Mei dit type gegevensboarne kinne jo SQL-databanktabellen dy bewarre binne op in SQL-tsjinner brûke. Ofhinklik fan jo systeemkonfiguraasje hearre MySQL, PostgreSQL en UnixOBC ta de stipe backends. Der binne mooglik mear (bgl. Oracle yn de kommersje Qt-ferzjes fan backends fan  tredden).
 Comment[gl]=Este tipo de fonte de datos permítelle usar as táboas de base de datos armacenadas nun servidor de SQL. Dependendo da configuración do seu sistema, MySQL, PostgreSQL e UnixODBC encóntranse entre os sistemas soportados. Poden até existir máis (Oracle nas versións comerciais de Qt ou mesmo sistemas de terceiros).
 Comment[he]=טיפוס מקור נתונים זה מאפשר לך להשתמש בטבלאות של מסדי נתונים של SQL שמאוחסנות בשרת SQL. בין ממשקי מסדי הנתונים הנתמכים ניתן למנות את MySQL ,PostgreSQL ו־UnixODBC (התמיכה תלויה בהגדרות המערכת שלך). עשויים להיות אף ממשקים נתמכים נוספים, כמו Oracle בגירסאות מסחריות של Qt או ממשקי צד שלישי.
 Comment[hu]=Ez az adatforrástípus SQL-kiszolgálón tárolt SQL táblák elérését teszi lehetővé. A rendszer konfigurációjától függően MySQL, PostgreSQL és UnixODBC adatbázistípust lehet választani. Ezeken felül még más is előfordulhat (pl. Oracle a Qt fizetős változatában).
