--- a/kword/templates/CardsAndLabels/BusinessCards10.desktop
+++ b/kword/templates/CardsAndLabels/BusinessCards10.desktop
@@ -17,6 +17,7 @@ Name[eu]=Bisita-txartelak 10
 Name[fa]=کارتهای تجاری ۱۰
 Name[fi]=10 käyntikorttia
 Name[fr]=Cartes d'affaires 10
+Name[fy]=Visitekaarten (10)
 Name[gl]=Tarxetas de Negocios 10
 Name[he]=כרטיסי ביקור 10
 Name[hi]=व्यापार कार्ड 10
