--- a/kword/templates/Wordprocessing/FaxLetter.desktop
+++ b/kword/templates/Wordprocessing/FaxLetter.desktop
@@ -21,6 +21,7 @@ Name[eu]=Fax-txantiloia
 Name[fa]=قالب دورنگار
 Name[fi]=Faksipohja
 Name[fr]=Modèle de fax
+Name[fy]=Faks-sjabloan
 Name[ga]=Teimpléad Facs
 Name[gl]=Modelo de Fax
 Name[he]=תבנית פקס
@@ -71,6 +72,7 @@ Comment[et]=Mall kiireks faksi koostamiseks
 Comment[fa]=قالبی برای ایجاد سریع یک ارتباط عینی
 Comment[fi]=Pohja, jonka avulla luot nopeasti telefaksin
 Comment[fr]=Un modèle pour communiquer par fax
+Comment[fy]=In sjabloan om fluch in faks op te meitsjen
 Comment[gl]=Un modelo básico para criar rapidamente un fax
 Comment[hu]=Sablon faxdokumentum gyors létrehozásához
 Comment[is]=Sniðmát til að búa til fax á einfaldan hátt
