--- a/kword/templates/Wordprocessing/Letter.desktop
+++ b/kword/templates/Wordprocessing/Letter.desktop
@@ -14,6 +14,7 @@ Name[es]=Página vacía
 Name[et]=Tühi lehekülg
 Name[fa]=صفحۀ خالی
 Name[fr]=Page vide
+Name[fy]=Lege side
 Name[ga]=Leathanach Folamh
 Name[gl]=Páxina en Branco
 Name[he]=דף ריק
@@ -54,6 +55,7 @@ Comment[et]=Loob tühja US Letter dokumendi.
 Comment[fa]=سند خالی حروف امریکایی را ایجاد می‌کند.
 Comment[fi]=Luo tyhjän US Letter -asiakirjan
 Comment[fr]=Crée un document US Letter vide.
+Comment[fy]=Makket in leech US Letter-dokumint oan.
 Comment[gl]=Cría un documento vacío para unha páxina Carta dos EUA.
 Comment[he]=יצירת מכתב אמריקאי ריק
 Comment[hu]=Létrehoz egy üres US Letter-méretű dokumentumot.
