--- a/kword/templates/Wordprocessing/Memo.desktop
+++ b/kword/templates/Wordprocessing/Memo.desktop
@@ -43,6 +43,7 @@ Comment[et]=Mall korraliku memo kiireks kirjapanemiseks
 Comment[fa]=قالب پایه‌ای برای نوشتن سریع یک نامۀ غیررسمی زیبا
 Comment[fi]=Yksinkertainen pohja muistioita varten
 Comment[fr]=Modèle de base pour écrire rapidement un joli mémo
+Comment[fy]=In sjabloan om fluch in moaie memo te skriuwen
 Comment[gl]=Modelo básico para criar rapidamente un memorando con bon aspeito
 Comment[hu]=Egyszerű sablon elegáns megjelenésű beadvány gyors létrehozásához
 Comment[is]=Sniðmát til að búa til flott minnisblað á einfaldan hátt
