--- a/kword/templates/Wordprocessing/TwoColumns.desktop
+++ b/kword/templates/Wordprocessing/TwoColumns.desktop
@@ -23,6 +23,7 @@ Name[fa]=دو ستون
 Name[fi]=Kaksi palstaa
 Name[fo]=Tveir teigar
 Name[fr]=Deux colonnes
+Name[fy]=Twa kolommen
 Name[ga]=Dhá Cholún
 Name[gl]=Dúas Colunas
 Name[he]=שני טורים
@@ -80,6 +81,7 @@ Comment[et]=Loob A4 dokumendi, igal leheküljel kaks veergu.
 Comment[fa]=یک سند A4 با دو ستون در هر صفحه ایجاد می‌کند.
 Comment[fi]=Luo kaksipalstaisen A4-asiakirjan 
 Comment[fr]=Crée un document A4 avec deux colonnes par page.
+Comment[fy]=Makket in A4-dokumint oan mei twa kolommen de side.
 Comment[ga]=Cruthaigh cáipéis A4 le dhá cholún sa leathanach.
 Comment[gl]=Cría un documento A4 con dúas colunas por páxina.
 Comment[he]=יצירת מסמך A4 עם שני טורים בדף
