--- a/kword/templates/Wordprocessing/TwoColumnsLetter.desktop
+++ b/kword/templates/Wordprocessing/TwoColumnsLetter.desktop
@@ -23,6 +23,7 @@ Name[fa]=دو ستون
 Name[fi]=Kaksi palstaa
 Name[fo]=Tveir teigar
 Name[fr]=Deux colonnes
+Name[fy]=Twa kolommen
 Name[ga]=Dhá Cholún
 Name[gl]=Dúas Colunas
 Name[he]=שני טורים
@@ -79,6 +80,7 @@ Comment[et]=Loob Letter dokumendi, igal leheküljel kaks veergu.
 Comment[fa]=یک سند نامه با دو ستون در هر صفحه ایجاد می‌کند.
 Comment[fi]=Luo kaksipalstaisen A4-asiakirjan 
 Comment[fr]=Crée un document US Letter avec deux colonnes par page
+Comment[fy]=Makket in Letter-dokumint oan mei twa kolommen de side.
 Comment[gl]=Cría unha carta con dúas colunas por páxina.
 Comment[hu]=Létrehoz egy kétoszlopos, Letter méretű dokumentumot.
 Comment[is]=Býr til letter skjal með tveimur dálkum á síðu.
