--- a/lib/kofficecore/kodocinfopropspage.desktop
+++ b/lib/kofficecore/kodocinfopropspage.desktop
@@ -20,6 +20,7 @@ Name[et]=KOffice'i dokumendiinfo omaduste lehekülg
 Name[eu]=KOffice-en dokumentuen informazio-propietateen orria
 Name[fa]=صفحۀ ویژگیهای اطلاعات سند KOffice
 Name[fr]=Page des propriétés d'un document KOffice
+Name[fy]=KOffice dokumint ynfo eigenskippen side
 Name[gl]=Páxina de Información das Propiedades do Documento de KOffice
 Name[he]=דף מאפיינים לגבי מידע מסמך של KOffice
 Name[hi]=के-ऑफ़िस दस्तावेज़ जानकारी गुण पृष्ठ
