--- a/mimetypes/kde33/vnd.oasis.opendocument.graphics.desktop
+++ b/mimetypes/kde33/vnd.oasis.opendocument.graphics.desktop
@@ -17,6 +17,7 @@ Comment[et]=OASIS OpenDocument graafika
 Comment[eu]=OASIS OpenDocument-en grafikoak
 Comment[fa]=نگاره سازی OASIS OpenDocument
 Comment[fr]=Graphiques OASIS OpenDocument
+Comment[fy]=OASIS IepenDokumint-illustraasjes
 Comment[ga]=Grafaic OpenDocument OASIS
 Comment[gl]=Debuxo OASIS OpenDocument
 Comment[he]=גרפיקה של OASIS OpenDocument
