--- a/servicetypes/koplugin.desktop
+++ b/servicetypes/koplugin.desktop
@@ -23,6 +23,7 @@ Comment[fa]=وصلۀ KOffice
 Comment[fi]=KOffice-laajennus
 Comment[fo]=KSkrivstovu-ístingur
 Comment[fr]=Module externe de KOffice
+Comment[fy]=KOffice plugin
 Comment[ga]=Breiseán KOffice
 Comment[gl]=Plugin para KOffice
 Comment[he]=תוסף של KOffice
