--- a/templates/TextDocument.desktop
+++ b/templates/TextDocument.desktop
@@ -16,6 +16,7 @@ Name[eu]=Testu-dokumentua...
 Name[fa]=سند متنی...
 Name[fi]=Tekstiasiakirja...
 Name[fr]=Document texte...
+Name[fy]=Tekstdokumint...
 Name[ga]=Cáipéis Téacs...
 Name[gl]=Documento de Texto...
 Name[he]=מסמך טקסט...
@@ -72,6 +73,7 @@ Comment[eu]=KWord dokumentu berria:
 Comment[fa]=سند جدید KWord:
 Comment[fi]=Uusi KWord-asiakirja:
 Comment[fr]=Nouveau document KWord :
+Comment[fy]=Nij KWord-dokumint:
 Comment[ga]=Cáipéis nua KWord:
 Comment[gl]=Novo documento de KWord:
 Comment[he]=מסמך חדש של KWord
