--- a/tools/kfile-plugins/gnumeric/kfile_gnumeric.desktop
+++ b/tools/kfile-plugins/gnumeric/kfile_gnumeric.desktop
@@ -14,6 +14,7 @@ Name[et]=Gnumeric'i info
 Name[fa]=اطلاعات Gnumeric
 Name[fi]=Gnumeric-tiedot
 Name[fr]=Informations sur Gnumeric
+Name[fy]=Gnumeric ynfo
 Name[ga]=Ginearálta
 Name[gl]=Información de Gnumeric
 Name[he]=מידע של Gnumeric
