--- a/tools/kfile-plugins/koffice/kfile_koffice.desktop
+++ b/tools/kfile-plugins/koffice/kfile_koffice.desktop
@@ -19,6 +19,7 @@ Name[fa]=اطلاعات KOffice
 Name[fi]=KOffice-tiedot
 Name[fo]=KSkrivstovu-upplýsingar
 Name[fr]=Informations sur KOffice
+Name[fy]=KOffice ynfo
 Name[ga]=Eolas faoi KOffice
 Name[gl]=Información de KOffice
 Name[he]=מידע KOffice
