--- a/tools/kfile-plugins/ooo/kfile_ooo.desktop
+++ b/tools/kfile-plugins/ooo/kfile_ooo.desktop
@@ -15,6 +15,7 @@ Name[eu]=OpenOffice.org-en informazioa
 Name[fa]=اطلاعات OpenOffice.org
 Name[fi]=OpenOffice.org-tiedot
 Name[fr]=Informations sur OpenOffice.org
+Name[fy]=OpenOffice.org ynfo
 Name[ga]=Eolas faoi OpenOffice.org
 Name[gl]=Información de OpenOffice.org
 Name[he]=מידע OpenOffice.org
