--- a/tools/spell/kspelltool.desktop
+++ b/tools/spell/kspelltool.desktop
@@ -21,6 +21,7 @@ Name[fa]=ابزار غلط‌گیر
 Name[fi]=Oikolukutyökalu
 Name[fo]=Rættstavari
 Name[fr]=Vérificateur orthographique
+Name[fy]=Staveringshifker
 Name[gl]=Verificador Ortográfico
 Name[he]=כלי בדיקת איות
 Name[hi]=वर्तनी शोधक औजार
@@ -87,6 +88,7 @@ Comment[fa]=بررسی هجی این واژه
 Comment[fi]=Tarkista tämän sanan kirjoitusasu
 Comment[fo]=Kanna um orðið er stavað rætt
 Comment[fr]=Vérifier l'orthographe de ce mot
+Comment[fy]=Hifkje de stavering fan dit wurd
 Comment[gl]=Verifica a Ortografía desta Palabra
 Comment[he]=בדוק את האיות של מילה זו
 Comment[hi]=इस शब्द की वर्तनी जाँचें
