--- a/tools/thesaurus/thesaurustool.desktop
+++ b/tools/thesaurus/thesaurustool.desktop
@@ -21,6 +21,7 @@ Name[eu]=Thesaurus tresna
 Name[fa]=ابزار Thesaurus
 Name[fi]=Synonyymisanakirja
 Name[fr]=Outil Thésaurus
+Name[fy]=Thesaurus ark
 Name[gl]=Ferramenta de Sinónimos
 Name[he]=כלי אגרון
 Name[hi]=समांतर शब्दकोश का औजार
@@ -80,6 +81,7 @@ Comment[eu]=Erakutsi erlazionatutako hitzak
 Comment[fa]=نمایش واژه‌های مربوط
 Comment[fi]=Näytä samankaltaiset sanat
 Comment[fr]=Afficher les mots liés
+Comment[fy]=Ferlykbere wurden sjen litte
 Comment[gl]=Mostrar as Palabras Relacionadas
 Comment[he]=הצג מילים קשורות
 Comment[hi]=सम्बन्धित शब्द दिखाएँ
