--- a/tools/thumbnail/otherofficethumbnail.desktop
+++ b/tools/thumbnail/otherofficethumbnail.desktop
@@ -21,6 +21,7 @@ Name[fa]=‍‍‍‍‍‍دیگر پرونده‌های دفتری
 Name[fi]=Muut toimistotiedostot
 Name[fo]=Aðrar skrivstovufílir
 Name[fr]=Autres documents bureautiques
+Name[fy]=Oare office triemmen
 Name[gl]=Outros Ficheiros de KOffice
 Name[he]=קבצי Office אחרים
 Name[hi]=अन्य ऑफ़िस फ़ाइलें
