--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -8,6 +8,7 @@ Name[x-test]=xxKSpreadxx
 Exec=kspread %u
 GenericName=Spreadsheet
 GenericName[el]=Λογιστικό φύλλο
+GenericName[es]=Hoja de cálculo
 GenericName[ga]=Scarbhileog
 GenericName[oc]=Fuèlha de calcul
 GenericName[pt]=Folha de cálculo
