implemnted a shape properties docker which shows shape config widgets as discussed at the last Koffice Berlin Meeting

--- a/plugins/dockers/CMakeLists.txt
+++ b/plugins/dockers/CMakeLists.txt
@@ -16,6 +16,9 @@ set(kofficedockers_SRCS
     strokedocker/StrokeDocker.cpp
     strokedocker/StrokeDockerFactory.cpp
 
+    shapeproperties/ShapePropertiesDocker.cpp
+    shapeproperties/ShapePropertiesDockerFactory.cpp
+
     Plugin.cpp
 )
 
