--- a/plugins/defaultTools/pics/CMakeLists.txt
+++ b/plugins/defaultTools/pics/CMakeLists.txt
@@ -1,1 +1,1 @@
-install( FILES rotate.png shear.png zoom_in_cursor.png zoom_out_cursor.png DESTINATION ${DATA_INSTALL_DIR}/koffice/icons)
+install( FILES rotate.png shear.png DESTINATION ${DATA_INSTALL_DIR}/koffice/icons)
