SVN_SILENT made messages (.desktop file)

--- a/kspread/kspread.desktop
+++ b/kspread/kspread.desktop
@@ -12,7 +12,7 @@ GenericName[es]=Hoja de cálculo
 GenericName[ga]=Scarbhileog
 GenericName[oc]=Fuèlha de calcul
 GenericName[pt]=Folha de cálculo
-GenericName[pt_BR]=Folha de cálculo
+GenericName[pt_BR]=Planilha
 GenericName[sv]=Kalkylark
 MimeType=application/vnd.oasis.opendocument.spreadsheet;application/x-kspread;application/vnd.ms-excel;text/csv;application/x-quattropro;
 Type=Application
