--- a/kspread/kspreadpart.desktop
+++ b/kspread/kspreadpart.desktop
@@ -57,6 +57,6 @@ GenericName[es]=Hoja de cálculo
 GenericName[ga]=Scarbhileog
 GenericName[oc]=Fuèlha de calcul
 GenericName[pt]=Folha de cálculo
-GenericName[pt_BR]=Folha de cálculo
+GenericName[pt_BR]=Planilha
 GenericName[sv]=Kalkylark
 Icon=kspread
