o rename KoOasisStyles to KoOdfStylesReader   I hope I did not break anything. If I have done however please send me   a mail.

--- a/libs/odf/CMakeLists.txt
+++ b/libs/odf/CMakeLists.txt
@@ -17,7 +17,7 @@ set(koodf_LIB_SRCS
     KoGenStyles.cpp
     KoOasisLoadingContext.cpp
     KoOasisSettings.cpp
-    KoOasisStyles.cpp
+    KoOdfStylesReader.cpp
     KoOdfNumberStyles.cpp
     KoOdfPaste.cpp
     KoOdfReadStore.cpp
@@ -42,8 +42,8 @@ install( FILES
     KoGenStyles.h
     KoOasisLoadingContext.h
     KoOasisSettings.h
-    KoOasisStyles.cpp
-    KoOasisStyles.h
+    KoOdfStylesReader.cpp
+    KoOdfStylesReader.h
     KoOdfNumberStyles.h
     KoOdfPaste.h
     KoOdfReadStore.h
