- fix an index out of range bug in position selector - make the position selector look good - use the position selector in the default tool option widget

--- a/plugins/defaultTools/CMakeLists.txt
+++ b/plugins/defaultTools/CMakeLists.txt
@@ -1,6 +1,6 @@
 project( defaulttools )
 
-include_directories( ${FLAKE_INCLUDES} ${QT_INCLUDES} ${KOMAIN_INCLUDES} ${KOGUIUTIL_INCLUDES})
+include_directories( ${FLAKE_INCLUDES} ${QT_INCLUDES} ${KOMAIN_INCLUDES} ${KOGUIUTILS_INCLUDES})
 
 add_subdirectory(pics)
 
